test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-policy-to-change-source/policy-modified.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: sync-modify-policy-to-change-source
spec:
  evaluation:
    synchronize:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["namespaces"]
  variables:
    - name: nsName
      expression: "object.metadata.name"
    - name: source
      expression: resource.get("v1", "configmaps", "default", "sync-modify-policy-to-change-source")
  generate:
    - expression: generator.apply(variables.nsName, [variables.source])
