test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-policy-to-change-source/trigger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sync-modify-policy-to-change-source
