test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-policy-to-change-source/downstream-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: sync-modify-policy-to-change-source
  namespace: sync-modify-policy-to-change-source
type: Opaque
