test/conformance/chainsaw/generating-policies/clone/sync/sync-modify-policy-to-change-source/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: GeneratingPolicy
metadata:
  name: sync-modify-policy-to-change-source
status:
  conditionStatus:
    conditions:
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
      type: RBACPermissionsGranted
    message: ""
    ready: true
